@@ -1,5 +1,7 @@
 2013-01-08  Anthony Green  <green@moxielogic.com>
 
+	* src/x86/sysv.S, src/x86/unix64.S: Only emit DWARF unwind info
+	when building with the GNU toolchain.
 	* testsuite/libffi.call/ffitest.h (CHECK): Fix for Solaris vendor
 	compiler.
 
